fix: card vertical padding on mobile

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -356,6 +356,7 @@ small {
   color: var(--color-card-white-text);
   -webkit-box-shadow: var(--bxs-card);
           box-shadow: var(--bxs-card);
+  padding: var(--space-4xl) 0;
 }
 
 .card--blue {
