--- a/app/scss/components/_card.scss
+++ b/app/scss/components/_card.scss
@@ -11,6 +11,7 @@
     background-color: var(--color-card-white-bg);
     color: var(--color-card-white-text);
     box-shadow: var(--bxs-card);
+    padding: var(--space-4xl) 0;
 
     &--blue{
         background-color: var(--color-card-blue-bg);
